jsonschemadsl2ecore.trafo.opt/test/test104/validtests/example4.test104
{
	"ale":{
		"runs-on":1,
		"bar":true
	}	
} 